[package]
authors = ["The Nushell Project Developers"]
build = "scripts/build.rs"
default-run = "nu"
description = "A new type of shell"
documentation = "https://www.nushell.sh/book/"
edition = "2021"
exclude = ["images"]
homepage = "https://www.nushell.sh"
license = "MIT"
name = "nu"
repository = "https://github.com/nushell/nushell"
rust-version = "1.60"
version = "0.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
nu-cli = "0.85.0"
nu-color-config = "0.85.0"
nu-cmd-base = "0.85.0"
nu-cmd-lang = "0.85.0"
nu-cmd-iox = {path = "../nu-cmd-iox", version = "0.85.0" }
nu-command = "0.85.0"
nu-engine = "0.85.0"
nu-explore = "0.85.0"
nu-json = "0.85.0"
nu-parser = "0.85.0"
nu-path = "0.85.0"
nu-plugin = { optional = true, version = "0.85.0" }
nu-pretty-hex = "0.85.0"
nu-protocol = "0.85.0"
nu-system = "0.85.0"
nu-table = "0.85.0"
nu-term-grid = "0.85.0"
nu-std = "0.85.0"
nu-utils = "0.85.0"
nu-ansi-term = "0.49.0"
reedline = { version = "0.24.0", features = ["bashisms", "sqlite"] }

crossterm = "0.27"
ctrlc = "3.4"
log = "0.4"
miette = { version = "5.10", features = ["fancy-no-backtrace"] }
mimalloc = { version = "0.1.37", default-features = false, optional = true }
serde_json = "1.0"
simplelog = "0.12"
time = "0.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
# Our dependencies don't use OpenSSL on Windows
openssl = { version = "0.10", features = ["vendored"], optional = true }
signal-hook = { version = "0.3", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.27", default-features = false, features = [
	"signal",
	"process",
	"fs",
	"term",
] }

[dev-dependencies]
nu-test-support = "0.85.0"
assert_cmd = "2.0"
criterion = "0.5"
pretty_assertions = "1.4"
rstest = { version = "0.18", default-features = false }
serial_test = "2.0"
tempfile = "3.8"

[features]
plugin = [
	"nu-plugin",
	"nu-cli/plugin",
	"nu-parser/plugin",
	"nu-command/plugin",
	"nu-protocol/plugin",
	"nu-engine/plugin",
]
default = ["plugin", "which-support", "trash-support", "sqlite", "mimalloc"]
stable = ["default"]
wasi = ["nu-cmd-lang/wasi"]
# NOTE: individual features are also passed to `nu-cmd-lang` that uses them to generate the feature matrix in the `version` command

# Enable to statically link OpenSSL (perl is required, to build OpenSSL https://docs.rs/openssl/latest/openssl/);
# otherwise the system version will be used. Not enabled by default because it takes a while to build
static-link-openssl = ["dep:openssl", "nu-cmd-lang/static-link-openssl"]

mimalloc = ["nu-cmd-lang/mimalloc", "dep:mimalloc"]

# Stable (Default)
which-support = ["nu-command/which-support", "nu-cmd-lang/which-support"]
trash-support = ["nu-command/trash-support", "nu-cmd-lang/trash-support"]

# SQLite commands for nushell
sqlite = ["nu-command/sqlite", "nu-cmd-lang/sqlite"]

# Main nu binary
[[bin]]
name = "nu"
path = "src/main.rs"
bench = false
